--- a/page-3.html
+++ b/page-3.html
@@ -121,7 +121,7 @@
      <div class="row row-cols-2 row-cols-md-3 g-3 justify-content-center">
       <div class="col">
         <div class="card border-0 shadow h-100">
-          <img src="assets/earning.svg" class="icon-img mt-3 m-auto" alt="Live CCTV Streaming" width="80px" height="80px">
+          <img src="assets/img-1.svg" class="icon-img mt-3 m-auto" alt="Increase Productivity" width="80px" height="80px">
           <div class="card-body px-2">
             <h3 class="card-title main-title">Increase Productivity</h3>
           </div>
@@ -129,7 +129,7 @@
       </div>
       <div class="col">
         <div class="card border-0 shadow h-100">
-          <img src="assets/salary.svg" class="icon-img mt-3 m-auto" alt="Child Ratio" width="80px" height="80px">
+          <img src="assets/img-2.svg" class="icon-img mt-3 m-auto" alt="Employee retention" width="80px" height="80px">
           <div class="card-body px-2">
             <h3 class="card-title main-title">Improve employee retention</h3>
           </div>
@@ -137,7 +137,7 @@
       </div>
       <div class="col">
         <div class="card border-0 shadow h-100">
-          <img src="assets/bag.svg" class="icon-img mt-3 m-auto" alt="Age Group" width="80px" height="80px">
+          <img src="assets/img-3.svg" class="icon-img mt-3 m-auto" alt="Attract top talent" width="80px" height="80px">
           <div class="card-body px-2">
             <h3 class="card-title main-title">Attract top talent</h3>
           </div>
@@ -145,7 +145,7 @@
       </div>
       <div class="col">
         <div class="card border-0 shadow h-100">
-          <img src="assets/money-back-guarantee.svg" class="icon-img mt-3 m-auto" alt="Live CCTV Streaming" width="80px" height="80px">
+          <img src="assets/img-4.svg" class="icon-img mt-3 m-auto" alt="Boost Morale" width="80px" height="80px">
           <div class="card-body px-2">
             <h3 class="card-title main-title">Boost Morale</h3>
           </div>
@@ -153,7 +153,7 @@
       </div>
       <div class="col">
         <div class="card border-0 shadow h-100">
-          <img src="assets/customer-service.svg" class="icon-img mt-3 m-auto" alt="Child Ratio" width="80px" height="80px">
+          <img src="assets/img-5.svg" class="icon-img mt-3 m-auto" alt="Reduce absenteeism" width="80px" height="80px">
           <div class="card-body px-2">
             <h3 class="card-title main-title">Reduce absenteeism</h3>
           </div>
@@ -163,76 +163,6 @@
   </div>
 </section>
 <!--  -->
-<!--  -->
-<section class="py-2 cta-block">
-  <div class="container">
-        <div class="d-flex gap-2 justify-content-center">
-          <a class="btn btn-primary fs-5 py-2 px-5 mx-3 rounded-pill text-white fw-bold" href="#">Get Started</a>
-        </div>
-        <!-- <p class="mt-3 text-center">Investment starts from Rs 40 Lakhs*</p> -->
-  </div>
-</section>
-<!--  -->
-<!--  -->
-<section class="py-4 text-center">
-    <div class="container">
-        <h3 class="title-text mb-4 text-center">Our Network</h3>
-        <div class="row g-3">
-          <div class="col-6 col-sm-4 col-xl-4">
-              <div class="d-flex justify-content-center align-items-center p-3 bg-warning bg-opacity-10 rounded-3">
-                  <span class="display-6 lh-1 text-warning mb-0"><img src="assets/india.svg" alt="Cities" width="50px" /></span>
-                  <div class="ms-3 h6 fw-normal mb-0">
-                      <div class="d-flex counter">
-                          <h5 class="purecounter mb-0 fw-bold h2" data-purecounter-start="0" data-purecounter-end="18" data-purecounter-delay="200" data-purecounter-duration="0">17</h5>
-                      </div>
-                      <p class="mb-0 h5">Cities</p>
-                  </div>
-              </div>
-          </div>
-      
-          <div class="col-6 col-sm-4 col-xl-4">
-              <div class="d-flex justify-content-center align-items-center p-3 bg-secondary-subtle bg-opacity-10 rounded-3">
-                  <span class="display-6 lh-1 text-blue mb-0"><img src="assets/school.svg" alt="Centres" width="50px" /></span>
-                  <div class="ms-3 h6 fw-normal mb-0">
-                      <div class="d-flex counter">
-                          <h5 class="purecounter mb-0 fw-bold h2" data-purecounter-start="0" data-purecounter-end="126" data-purecounter-delay="200" data-purecounter-duration="0">119</h5>
-                      </div>
-                      <p class="mb-0 h5">Centres</p>
-                  </div>
-              </div>
-          </div>
-      
-          <div class="col-sm-4 col-xl-4">
-              <div class="d-flex justify-content-center align-items-center p-3 bg-info-subtle bg-opacity-10 rounded-3">
-                  <span class="display-6 lh-1 text-purple mb-0"><img src="assets/family.svg" alt="Delighted Parents" width="50px" /></span>
-                  <div class="ms-4 h6 fw-normal mb-0">
-                      <div class="d-flex counter">
-                          <h5 class="purecounter mb-0 fw-bold h2" data-purecounter-start="0" data-purecounter-end="38345" data-purecounter-delay="200" data-purecounter-duration="0">37252</h5>
-                      </div>
-                      <p class="mb-0 h5">Delighted Parents</p>
-                  </div>
-              </div>
-          </div>
-      </div>       
-    </div>
-</section>
-<!--  -->
-<!--  -->
-<section class="py-4">
-  <div class="container">
-      <h3 class="title-text mb-4 text-center">Welcome To Footprints Center</h3>
-      <div class="row justify-content-center">
-        <div class="col-lg-9">
-          <div class="card card-body px-2 shadow" id="v1">
-            <video width='100%' autoplay muted loop controls playsinline preload='metadata'>
-              <source src='https://www.footprintseducation.in/landingpage/franchise_v2/assets/images/videos/Franchise-Center-Tour.mp4' type='video/mp4'>
-            </video>
-          </div>
-        </div>
-      </div>
-      <!--  -->
-  </div>
-</section>
 <!--  -->
 <section class="py-4">
   <div class="container">
@@ -275,178 +205,11 @@
 </section>
 <!--  -->
 <!--  -->
-<section class="py-2 cta-block">
-  <div class="container">
-      <div class="d-flex gap-2 justify-content-center">
-          <a class="btn btn-primary fs-5 py-2 px-5 mx-3 rounded-pill text-white fw-bold" href="#">Enquire Now</a>
-      </div>
-      <p class="mb-3 mb-lg-0 text-center mt-3">Investment starts from Rs 40 Lakhs*</p>
-  </div>
-</section>
-<!--  -->
-<section class="py-4">
-    <div class="container">
-        <h3 class="title-text mb-4 text-center">Our Happy Franchise Owners</h3>
-        <div class="row justify-content-center">
-          <div class="col-lg-9">
-            <div class="card card-body px-2 shadow" id="v1">
-              <video width='100%' autoplay muted loop controls playsinline preload='metadata'>
-                <source src='https://www.footprintseducation.in/landingpage/franchise_v2/assets/images/videos/Footprints-Franchise-Founders-Speak.mp4' type='video/mp4'>
-              </video>
-            </div>
-          </div>
-        </div>
-    </div>
-</section>
-
-<!--  -->
-<section class="py-2 cta-block">
-  <div class="container">
-      <div class="d-flex gap-2 justify-content-center">
-          <a class="btn btn-primary fs-5 py-2 px-5 mx-3 rounded-pill text-white fw-bold" href="#">Enquire Now</a>
-      </div>
-      <p class="mb-3 mb-lg-0 text-center mt-3">Investment starts from Rs 40 Lakhs*</p>
-  </div>
-</section>
-
-<!--  -->
-<section class="pt-3 pb-0 py-lg-4 media">
-  <div class="container">
-      <div class="row mb-3">
-          <div class="col-md-12 text-center mx-auto">
-              <h3 class="title-text mb-4 text-center">Media Coverage</h3>
-          </div>
-      </div>
-      <div class="row justify-content-center my-4">
-          <div class="col-12">
-              <div class="tiny-slider arrow-round">
-                  <div class="tiny-slider-inner" data-arrow="false" data-autoplay="true" data-dots="false" data-gutter="30" data-items-xl="6" data-items-lg="5" data-items-md="4" data-items-sm="3" data-items-xs="3">
-                      <div class="item"><img src="assets/media/TED.png" alt="TED" class="img-fluid" /></div>
-                      <div class="item"><img src="assets/media/Forbes.png" alt="Forbes" class="img-fluid" /></div>
-                      <div class="item"><img src="assets/media/BW-logopng.png" alt="BW-logopng" class="img-fluid" /></div>
-                      <div class="item"><img src="assets/media/India-Today.png" alt="India-Today"  class="img-fluid"/></div>
-                      <div class="item"><img src="assets/media/Indian-Express.png" alt="Indian-Express" class="img-fluid" /></div>
-                      <div class="item"><img src="assets/media/Time-of-india.png" alt="Time-of-india" class="img-fluid" /></div>
-                      <div class="item"><img src="assets/media/Pioneer-logo.jpg" alt="Pioneer-logo"  class="img-fluid"/></div>
-                  </div>
-              </div>
-          </div>
-      </div>
-  </div>
-</section>
-
-
-<!--  -->
-<section class="py-4 text-center">
-  <div class="container">
-      <h3 class="title-text mb-4 text-center">Awards</h3>
-     <div class="row row-cols-2 row-cols-md-4 g-3">
-      <div class="col">
-        <div class="card h-100">
-          <img src="assets/winner.svg" class="icon-img mt-3 m-auto" alt="winner" width="80px" height="80px">
-          <div class="card-body px-2">
-            <h3 class="card-title main-title">2023</h3>
-            <p class="mb-2 h6">Leading Preschool in India</p>
-            <p class="main-para">by BW Education</p>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
-          <img src="assets/winner.svg" class="icon-img mt-3 m-auto" alt="winner" width="80px" height="80px">
-          <div class="card-body px-2">
-            <h3 class="card-title main-title">2018</h3>
-            <p class="mb-2 h6">Best Preschool</p>
-            <p class="main-para">by Silicon India</p>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
-          <img src="assets/winner.svg" class="icon-img mt-3 m-auto" alt="winner" width="80px" height="80px">
-          <div class="card-body px-2">
-            <h3 class="card-title main-title">2023</h3>
-            <p class="mb-2 h6">Innovation for Curriculum</p>
-            <p class="main-para">for Preschool by BW Education</p>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
-          <img src="assets/winner.svg" class="icon-img mt-3 m-auto" alt="winner" width="80px" height="80px">
-          <div class="card-body px-2">
-            <h3 class="card-title main-title">2017</h3>
-            <p class="mb-2 h6">Best Preschool by Brainfeed</p>
-            <p class="main-para">School Excellence Awards</p>
-          </div>
-        </div>
-      </div>
-     </div>
-  </div>
-</section>
-<!--  -->
-
-<section class="py-2 cta-block">
-    <div class="container">
-        <div class="d-flex gap-2 justify-content-center">
-            <a class="btn btn-primary fs-5 py-2 px-5 mx-3 rounded-pill text-white fw-bold" href="#">Enquire Now</a>
-        </div>
-        <p class="mb-3 mb-lg-0 text-center mt-3">Investment starts from Rs 40 Lakhs*</p>
-    </div>
-</section>
-<!--  -->
-<section class="py-4 text-center">
-  <div class="container">
-      <h3 class="title-text mb-4 text-center">Our Team </h3>
-      <!--  -->
-      <div class="row row-cols-2 row-cols-md-4 g-4">
-        <div class="col">
-          <div class="card h-100">
-            <img src="assets/team/Raj-Singhal.webp" class="card-img-top" alt="Raj-Singhal">
-            <div class="card-body px-2">
-              <h5 class="card-title main-title">Raj Singhal</h5>
-              <p class="card-text main-para">CEO, B.Tech - IIT-Delhi</p>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card h-100">
-            <img src="assets/team/Purvesh-Sharma.webp" class="card-img-top" alt="Purvesh-Sharma">
-            <div class="card-body px-2">
-              <h5 class="card-title main-title">Purvesh Sharma</h5>
-              <p class="card-text main-para">COO, B.Tech- IIT-Delhi</p>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card h-100">
-            <img src="assets/team/Ashish-Aggarwal.webp" class="card-img-top" alt="Ashish-Aggarwal">
-            <div class="card-body px-2">
-              <h5 class="card-title main-title">Ashish Aggarwal</h5>
-              <p class="card-text main-para">CO- Founder, M.Tech-IIT-D, MBA-IIM-C</p>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card h-100">
-            <img src="assets/team/Amita-Bhardwaj.webp" class="card-img-top" alt="Amita-Bhardwaj">
-            <div class="card-body px-2">
-              <h5 class="card-title main-title">Amita Bhardwaj</h5>
-              <p class="card-text main-para">Chief Delivery Officer</p>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!--  -->
-  </div>
-</section>
-
-<!--  -->
 <section>
   <div class="container">
       <!--  -->
       <h3 class="title-text mb-4 text-center">Our Corporate Universe</h3>
-        <div class="row justify-content-center my-2 mb-5">
+        <div class="row justify-content-center my-2">
           <div class="col-12">
               <div class="tiny-slider arrow-round">
                   <div class="tiny-slider-inner" data-arrow="false" data-autoplay="true" data-dots="false" data-gutter="10" data-items-xl="6" data-items-lg="4" data-items-md="3" data-items-sm="3" data-items-xs="3">
@@ -523,6 +286,128 @@
 </section>
 <!--  -->
 <!--  -->
+<section class="py-4 text-center">
+    <div class="container">
+        <h3 class="title-text mb-4 text-center">Our Team </h3>
+        <!--  -->
+        <div class="row row-cols-2 row-cols-md-4 g-4">
+          <div class="col">
+            <div class="card h-100">
+              <img src="assets/team/Raj-Singhal.webp" class="card-img-top" alt="Raj-Singhal">
+              <div class="card-body px-2">
+                <h5 class="card-title main-title">Raj Singhal</h5>
+                <p class="card-text main-para">CEO, B.Tech - IIT-Delhi</p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card h-100">
+              <img src="assets/team/Purvesh-Sharma.webp" class="card-img-top" alt="Purvesh-Sharma">
+              <div class="card-body px-2">
+                <h5 class="card-title main-title">Purvesh Sharma</h5>
+                <p class="card-text main-para">COO, B.Tech- IIT-Delhi</p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card h-100">
+              <img src="assets/team/Ashish-Aggarwal.webp" class="card-img-top" alt="Ashish-Aggarwal">
+              <div class="card-body px-2">
+                <h5 class="card-title main-title">Ashish Aggarwal</h5>
+                <p class="card-text main-para">CO- Founder, M.Tech-IIT-D, MBA-IIM-C</p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card h-100">
+              <img src="assets/team/Amita-Bhardwaj.webp" class="card-img-top" alt="Amita-Bhardwaj">
+              <div class="card-body px-2">
+                <h5 class="card-title main-title">Amita Bhardwaj</h5>
+                <p class="card-text main-para">Chief Delivery Officer</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!--  -->
+    </div>
+  </section>
+  
+<!--  -->
+<section class="pt-3 pb-0 py-lg-4 media">
+    <div class="container">
+        <div class="row mb-3">
+            <div class="col-md-12 text-center mx-auto">
+                <h3 class="title-text mb-4 text-center">Media Coverage</h3>
+            </div>
+        </div>
+        <div class="row justify-content-center my-4">
+            <div class="col-12">
+                <div class="tiny-slider arrow-round">
+                    <div class="tiny-slider-inner" data-arrow="false" data-autoplay="true" data-dots="false" data-gutter="30" data-items-xl="6" data-items-lg="5" data-items-md="4" data-items-sm="3" data-items-xs="3">
+                        <div class="item"><img src="assets/media/TED.png" alt="TED" class="img-fluid" /></div>
+                        <div class="item"><img src="assets/media/Forbes.png" alt="Forbes" class="img-fluid" /></div>
+                        <div class="item"><img src="assets/media/BW-logopng.png" alt="BW-logopng" class="img-fluid" /></div>
+                        <div class="item"><img src="assets/media/India-Today.png" alt="India-Today"  class="img-fluid"/></div>
+                        <div class="item"><img src="assets/media/Indian-Express.png" alt="Indian-Express" class="img-fluid" /></div>
+                        <div class="item"><img src="assets/media/Time-of-india.png" alt="Time-of-india" class="img-fluid" /></div>
+                        <div class="item"><img src="assets/media/Pioneer-logo.jpg" alt="Pioneer-logo"  class="img-fluid"/></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!--  -->
+
+<!--  -->
+<section class="py-4 text-center">
+<div class="container">
+    <h3 class="title-text mb-4 text-center">Awards</h3>
+    <div class="row row-cols-2 row-cols-md-4 g-3">
+    <div class="col">
+        <div class="card h-100">
+        <img src="assets/winner.svg" class="icon-img mt-3 m-auto" alt="winner" width="80px" height="80px">
+        <div class="card-body px-2">
+            <h3 class="card-title main-title">2023</h3>
+            <p class="mb-2 h6">Leading Preschool in India</p>
+            <p class="main-para">by BW Education</p>
+        </div>
+        </div>
+    </div>
+    <div class="col">
+        <div class="card h-100">
+        <img src="assets/winner.svg" class="icon-img mt-3 m-auto" alt="winner" width="80px" height="80px">
+        <div class="card-body px-2">
+            <h3 class="card-title main-title">2018</h3>
+            <p class="mb-2 h6">Best Preschool</p>
+            <p class="main-para">by Silicon India</p>
+        </div>
+        </div>
+    </div>
+    <div class="col">
+        <div class="card h-100">
+        <img src="assets/winner.svg" class="icon-img mt-3 m-auto" alt="winner" width="80px" height="80px">
+        <div class="card-body px-2">
+            <h3 class="card-title main-title">2023</h3>
+            <p class="mb-2 h6">Innovation for Curriculum</p>
+            <p class="main-para">for Preschool by BW Education</p>
+        </div>
+        </div>
+    </div>
+    <div class="col">
+        <div class="card h-100">
+        <img src="assets/winner.svg" class="icon-img mt-3 m-auto" alt="winner" width="80px" height="80px">
+        <div class="card-body px-2">
+            <h3 class="card-title main-title">2017</h3>
+            <p class="mb-2 h6">Best Preschool by Brainfeed</p>
+            <p class="main-para">School Excellence Awards</p>
+        </div>
+        </div>
+    </div>
+    </div>
+</div>
+</section>
+<!--  -->
 
 <section class="footer mt-auto fixed-bottom">
         <div class="d-flex">
@@ -580,8 +465,9 @@
         </div>
       </div>
     </div>
-  </div>
+</div>
 <!--  -->
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
 <script src="assets/vendor/tiny-slider/tiny-slider.js"></script>
