--- a/page-3.html
+++ b/page-3.html
@@ -56,7 +56,7 @@
 </header>  
 
 <!--  -->
-<section class="masthead hero-img">
+<section class="masthead hero-img-new">
     <div class="container">
         <div class="hero-block">
             <div class="hero-title">
@@ -115,7 +115,7 @@
     </div>
 </section>
 <!--  -->
-<section class="py-4 text-center">
+<section class="py-lg-4 text-center">
   <div class="container">
       <h2 class="title-text mb-4 text-center">Here are some benefits of having a footprints daycare in your office</h2>
      <div class="row row-cols-2 row-cols-md-3 g-3 justify-content-center">
@@ -164,7 +164,7 @@
 </section>
 <!--  -->
 <!--  -->
-<section class="py-4">
+<section class="py-lg-4">
   <div class="container">
       <h3 class="title-text mb-4 text-center">Safety First</h3>
      <div class="row row-cols-2 row-cols-md-4 g-3">
@@ -205,7 +205,7 @@
 </section>
 <!--  -->
 <!--  -->
-<section>
+<section class="py-lg-4">
   <div class="container">
       <!--  -->
       <h3 class="title-text mb-4 text-center">Our Corporate Universe</h3>
@@ -286,7 +286,48 @@
 </section>
 <!--  -->
 <!--  -->
-<section class="py-4 text-center">
+<section class="bg-light py-lg-4 review-section">
+    <div class="container">
+        <!--  -->
+        <h3 class="title-text mb-4 text-center">Reviews</h3>
+          <div class="row justify-content-center my-2">
+            <div class="col-12">
+                <div class="tiny-slider arrow-round">
+                    <div class="tiny-slider-inner" data-arrow="false" data-autoplay="true" data-dots="false" data-gutter="40" data-items-xl="2" data-items-lg="2" data-items-md="2" data-items-sm="2" data-items-xs="1">
+                        <div class="item">
+                            <div class="card border-0 shadow-sm my-4">
+                                <div class="card-body">
+                                  <p class="card-text">“We are impressed by the quality of services we have received from Footprints Pre-school and DayCare. We thank the entire team of Footprints, for the wonderful job in helping us develop our on-site DayCare.”</p>
+                                  <div class="review-logo text-end"><img src="assets/Bharti_Airtel_Logo.svg" alt="Bharti_Airtel_Logo" width="100" height="50"></div>
+                                </div>
+                              </div>
+                        </div>
+                        <div class="item">
+                            <div class="card border-0 shadow-sm my-4">
+                                <div class="card-body">
+                                <p class="card-text">“Footprints Daycare is simply amazing. The tremendous job done by all the teachers and staff is too good. It has been proved to be the best parenting partner. They take care very well of the kids and handle them with immense car.”</p>
+                                <div class="review-logo text-end"><img src="assets/Amazon_logo.svg" alt="Amazon_logo" width="80" height="40"></div>
+                                </div>
+                              </div>
+                        </div>
+                        <div class="item">
+                            <div class="card border-0 shadow-sm my-4">
+                                <div class="card-body">
+                                  <p class="card-text">“I take an opportunity to Thank you all for building this bridge at Wipro to take care of work and child. My work is made easy, I am a happy mom and would like to appreciate Wipro team and footprints too for this awesome service.”</p>
+                                  <div class="review-logo text-end"><img src="assets/Wipro.svg" alt="Wipro" width="100" height="50"></div>
+                                </div>
+                              </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+          </div>    
+        <!--  -->
+    </div>
+  </section>
+  <!--  -->
+<!--  -->
+<section class="py-lg-5 text-center our-team">
     <div class="container">
         <h3 class="title-text mb-4 text-center">Our Team </h3>
         <!--  -->
@@ -333,7 +374,7 @@
   </section>
   
 <!--  -->
-<section class="pt-3 pb-0 py-lg-4 media">
+<section class="bg-light py-lg-4 media-section">
     <div class="container">
         <div class="row mb-3">
             <div class="col-md-12 text-center mx-auto">
@@ -360,7 +401,7 @@
 <!--  -->
 
 <!--  -->
-<section class="py-4 text-center">
+<section class="py-lg-4 text-center">
 <div class="container">
     <h3 class="title-text mb-4 text-center">Awards</h3>
     <div class="row row-cols-2 row-cols-md-4 g-3">
