--- a/page-3.html
+++ b/page-3.html
@@ -205,14 +205,14 @@
 </section>
 <!--  -->
 <!--  -->
-<section class="py-lg-4">
+<section class="py-lg-4 corporate-section">
   <div class="container">
       <!--  -->
       <h3 class="title-text mb-4 text-center">Our Corporate Universe</h3>
         <div class="row justify-content-center my-2">
           <div class="col-12">
               <div class="tiny-slider arrow-round">
-                  <div class="tiny-slider-inner" data-arrow="false" data-autoplay="true" data-dots="false" data-gutter="10" data-items-xl="6" data-items-lg="4" data-items-md="3" data-items-sm="3" data-items-xs="3">
+                  <div class="tiny-slider-inner" data-arrow="false" data-autoplay="true" data-dots="false" data-gutter="30" data-items-xl="6" data-items-lg="4" data-items-md="3" data-items-sm="3" data-items-xs="2">
                       <div class="item">
                           <div class="container">
                               <img src="assets/logo/logo-01.png" alt="Logo" height="100px" width="100px" class="img-fluid" />
@@ -285,6 +285,83 @@
   </div>
 </section>
 <!--  -->
+<section class="py-lg-5 highscope">
+    <div class="container">
+        <div class="highscope-logo-title text-center">
+            <img src="assets/highscope.png" alt="highscope" width="420" height="100" class="img-fluid mb-lg-4">
+            <p>Based on 50 Years of research by US based HighScope Foundation engaged in curriculum development since 1962</p>
+            <p>A child centric curriculum with activities right from birth to 5 years maximizing the opportunity for child growth & development</p>
+            <h3 class="h5">Being used in over <span class="fw-bold text-dark">50,000</span> preschools in more than <span class="fw-bold text-dark">20 Countries</span> across the world like <span class="fw-bold text-dark">US, UK, EU, AU & China.</span></h3>
+        </div>
+        <div class="row highscope-title">
+            <div class="col-12">
+                <h3>Active Learning Initiative <br>Key Developmental Indicators</h3>
+            </div>
+        </div>
+        <div class="row row-cols-1 row-cols-md-4 mb-3 highscope-list">
+            <div class="col">
+              <div class="card mb-4 rounded-3 shadow-sm border-primary h-100">
+                <div class="card-header py-3 text-bg-primary border-primary">
+                    <h4 class="my-0 fw-normal">Assessment</h4>
+                </div>
+                <div class="card-body">
+                   <ul class="list-unstyled m-0">
+                        <li>Teamwork</li>
+                        <li>Daily Anecdotal Notes</li>
+                        <li>Daily Planning</li>
+                        <li>Child Assessment</li>
+                        <li>Program Assessment</li>
+                    </ul>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+                <div class="card mb-4 rounded-3 shadow-sm border-primary h-100">
+                    <div class="card-header py-3 text-bg-primary border-primary">
+                        <h4 class="my-0 fw-normal">Adult Child Interact</h4>
+                    </div>
+                    <div class="card-body">
+                        <ul class="list-unstyled m-0">
+                            <li>Interaction Strategies</li>
+                            <li>Encouragement</li>
+                            <li>Problem-Solving</li>
+                            <li>Approach to Conflict</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card mb-4 rounded-3 shadow-sm border-primary h-100">
+                    <div class="card-header py-3 text-bg-primary border-primary">
+                        <h4 class="my-0 fw-normal">Daily Routine</h4>
+                    </div>
+                    <div class="card-body">
+                        <ul class="list-unstyled m-0">
+                            <li>Plan-Do-Review </li>
+                            <li>Small-Group Time</li>
+                            <li>Large-Group Times</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card mb-4 rounded-3 shadow-sm border-primary h-100">
+                    <div class="card-header py-3 text-bg-primary border-primary">
+                        <h4 class="my-0 fw-normal">Learning Environment</h4>
+                    </div>
+                  <div class="card-body">
+                      <ul class="list-unstyled m-0">
+                        <li>Areas</li>
+                        <li>Materials </li>
+                        <li>Storage</li>
+                      </ul>
+                  </div>
+                </div>
+              </div>
+          </div>
+    </div>
+</section>
+
 <!--  -->
 <section class="bg-light py-lg-4 review-section">
     <div class="container">
